parser/src/test/resources/corpus/invalid/02_missing_brace_open.ff
rule "Missing Open Brace"
  description: "no opening brace"
}
